reconfigured config/database.yml to work with vps

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 #   gem 'mysql2'
 #
 # And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+#   http:/dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql2
   encoding: utf8
@@ -16,7 +16,7 @@ development:
   pool: 5
   username: fitnessfreak
   password: Dr3amFortre$$
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /var/lib/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -29,7 +29,7 @@ test:
   pool: 5
   username: fitnessfreak
   password: Dr3amFortre$$
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /var/lib/mysql/mysql.sock
 
 production:
   adapter: mysql2
@@ -39,4 +39,4 @@ production:
   pool: 5
   username: fitnessfreak
   password: Dr3amFortre$$
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /var/lib/mysql/mysql.sock
