First commit from macmini

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,8 @@ development:
   database: calendarworkouts_development
   pool: 5
   username: fitnessfreak
-  password: Dr3amFortre$$
-  socket: /var/lib/mysql/mysql.sock
+  password: Vigilant1!
+  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -28,8 +28,8 @@ test:
   database: calendarworkouts_test
   pool: 5
   username: fitnessfreak
-  password: Dr3amFortre$$
-  socket: /var/lib/mysql/mysql.sock
+  password: Vigilant1!
+  socket: /tmp/mysql.sock
 
 production:
   adapter: mysql2
@@ -38,5 +38,5 @@ production:
   database: calendarworkouts_production
   pool: 5
   username: fitnessfreak
-  password: Dr3amFortre$$
-  socket: /var/lib/mysql/mysql.sock
+  password: Vigilant1!
+  socket: /tmp/mysql.sock
